logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__go_aggressive.snap
---
source: tests/semantic_tests.rs
assertion_line: 84
expression: result
---
{
  "input": "go aggressive for engine A",
  "parsed": {
    "command_type": "semantic",
    "target": {
      "engines": [
        "A"
      ]
    },
    "params": {},
    "semantic": {
      "description": "Apply aggressive preset (+30% mult, +20% lot, -25% grid)",
      "operations": [
        {
          "field": "multiplier",
          "op": "scale",
          "factor": 1.3
        },
        {
          "field": "initial_lot",
          "op": "scale",
          "factor": 1.2
        },
        {
          "field": "grid",
          "op": "scale",
          "factor": 0.75
        }
      ]
    }
  },
  "result": {
    "success": true,
    "message": "[SEMANTIC PREVIEW] Apply aggressive preset (+30% mult, +20% lot, -25% grid)",
    "preview": {
      "description": "Apply aggressive preset (+30% mult, +20% lot, -25% grid)",
      "operations": [
        {
          "factor": 1.3,
          "field": "multiplier",
          "op": "scale"
        },
        {
          "factor": 1.2,
          "field": "initial_lot",
          "op": "scale"
        },
        {
          "factor": 0.75,
          "field": "grid",
          "op": "scale"
        }
      ],
      "target": {
        "engines": [
          "A"
        ]
      }
    }
  },
  "status": "pass"
}
