logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__partial_command.snap
---
source: tests/semantic_tests.rs
assertion_line: 201
expression: result
---
{
  "input": "set grid",
  "parsed": {
    "command_type": "set",
    "target": {
      "field": "grid"
    },
    "params": {}
  },
  "result": {
    "success": false,
    "message": "Missing field or value"
  },
  "status": "fail"
}
