logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__show_power_group_values.snap
---
source: tests/semantic_tests.rs
assertion_line: 128
expression: result
---
{
  "input": "show me power group 1 values",
  "parsed": {
    "command_type": "query",
    "target": {
      "groups": [
        1
      ],
      "logics": [
        "POWER"
      ]
    },
    "params": {}
  },
  "result": {
    "success": true,
    "message": "Snapshot mode: showing key config values",
    "preview": {
      "mode": "snapshot",
      "target": {
        "groups": [
          1
        ],
        "logics": [
          "POWER"
        ]
      }
    }
  },
  "status": "pass"
}
