logic-canvas-main/src-tauri/tests/snapshots/semantic_tests__tighten_grid.snap
---
source: tests/semantic_tests.rs
assertion_line: 112
expression: result
---
{
  "input": "tighten the grid",
  "parsed": {
    "command_type": "semantic",
    "target": {
      "field": "grid"
    },
    "params": {},
    "semantic": {
      "description": "Tighten grid by 20%",
      "operations": [
        {
          "field": "grid",
          "op": "scale",
          "factor": 0.8
        }
      ]
    }
  },
  "result": {
    "success": true,
    "message": "[SEMANTIC PREVIEW] Tighten grid by 20%",
    "preview": {
      "description": "Tighten grid by 20%",
      "operations": [
        {
          "factor": 0.8,
          "field": "grid",
          "op": "scale"
        }
      ],
      "target": {
        "field": "grid"
      }
    }
  },
  "status": "pass"
}
